<resources>
    <string name="app_name">FoodIsGr8</string>
    <string name="itemMenu">Menú</string>
    <string name="itemServicios">Servicios</string>
    <string name="itemUbicanos">Ubícanos</string>
    <string name="welcome">Bienvenidos a FoodIsGr8!</string>
    <string name="msgPhone">Puedes contactarnos al 3215489654 para domicilios y reservas!</string>
    <string name="msgWelcome">Bienvenido</string>
    <string name="msgDescription">FoodIsGr8 es una nueva tienda que llega a la ciudad con el fin de ofrecer a sus clientes una amplia gama de productos. Adicionalmente, ofrecemos diferentes servicion que llevan la expeciencia gastronómica a un nuevo nivel.</string>
    <string name="msgLogo">AppLogo</string>
    <string name="msgSearch">Buscar en FoodIsGr8</string>
    <string name="msgProductName">Product Name</string>
    <string name="msgProductDescription">Product Description</string>
    <string name="msgService">Service Name</string>
    <string name="msgServiceDescription">Service Description</string>
    <string name="msgStoreName">Store Name</string>
    <string name="msgStoreDescription">Store Description</string>
    <string name="msgNoFavorites">No tienes Favoritos... Aún!</string>
    <string name="msgDetailTitle">Detalle del Producto</string>
    <string name="msgGoHome">Volver al Inicio</string>
    <string name="msgDetails">Ver Detalles</string>
    <string name="msgAddFavorites">Agregar A Favoritos</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="btnViewMap">Ver en Mapa</string>
    <string name="msgRemoveFav">Quitar de Favoritos</string>
</resources>