<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".vista.fragments.FragmentHome">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="34sp" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="331dp"
        android:layout_weight="1"
        android:contentDescription="@string/msgLogo"
        tools:srcCompat="@drawable/isgr8" />

    <Button
        android:id="@+id/btnWelcome"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_weight="1"
        android:text="@string/msgWelcome"
        android:textColor="#616161" />

    <TextView
        android:id="@+id/txtAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/msgDescription" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/msgPhone" />

</LinearLayout>