<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtFavoriteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msgProductName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgFavoriteImage"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/msgLogo"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtFavoriteDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msgProductDescription" />

            <Button
                android:id="@+id/btnFavoriteDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msgDetails"
                android:textColor="#616161" />

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msgRemoveFav"
                android:textColor="#616161" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>