<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlador.activities.ActivityFavoriteDetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msgDetailTitle"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imgFavDetail"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:contentDescription="@string/msgLogo"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtFavNameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msgProductName"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtFavDescDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msgProductDescription" />

            <Button
                android:id="@+id/btnFavGoMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msgGoHome"
                android:textColor="#616161" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>