<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgStoreImage"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:contentDescription="@string/msgLogo"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtStoreName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msgStoreName" />

        <TextView
            android:id="@+id/txtStoreDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msgStoreDescription" />
    </LinearLayout>

</LinearLayout>