<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.fragments.FragmentServices">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgServ1"
                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/msgLogo"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@drawable/isgr8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtServ1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/msgService" />

                    <TextView
                        android:id="@+id/txtDescServ1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/msgServiceDescription" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgServ2"
                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/msgLogo"
                    tools:srcCompat="@drawable/isgr8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtServ2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/msgService" />

                    <TextView
                        android:id="@+id/txtDescServ2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/msgServiceDescription" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgServ3"
                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/msgLogo"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@drawable/isgr8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtServ3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/msgService" />

                    <TextView
                        android:id="@+id/txtDescServ3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/msgServiceDescription" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgServ4"
                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/msgLogo"
                    tools:srcCompat="@drawable/isgr8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtServ4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/msgService" />

                    <TextView
                        android:id="@+id/txtDescServ4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/msgServiceDescription" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>